syntax = "proto3";
option csharp_namespace = "Bikes.Grpc.Products";

package products;

message Request {
  string Content = 1;
}

message Response {
  string Message = 1;
}

service ProductsService {
  rpc Unary(Request) returns (Response);
  rpc ClientStream(stream Request) returns (Response);
  rpc ServerStream(Request) returns (stream Response);
  rpc BiDirectionalStream(stream Request) returns (stream Response);
}